--- a/.github/workflows/nightlyCypressTests.yaml
+++ b/.github/workflows/nightlyCypressTests.yaml
@@ -1,9 +1,9 @@
-name: Nightly Cypress Tests - QAT & DEV
+name: Nightly Cypress Tests
 
 on:
   schedule:
-    # Runs at 1 AM UTC every weekday (Monday to Friday)
-    - cron: "0 1 * * 1-5"
+    # Runs at 2 AM UTC every weekday (Monday to Friday)
+    - cron: "0 2 * * 1-5"
   workflow_dispatch:
     inputs:
       environment:
