--- a/configs/.env.preprod
+++ b/configs/.env.preprod
@@ -21,3 +21,7 @@ VITE_MSAL_CLIENT_ID=29029e55-d4c3-4545-b657-fc0e437df4df
 VITE_MSAL_TENANT_ID=f52ae62b-2ff7-4104-b90f-48cdc7454bfb
 VITE_AUTH_ENDPOINT_URI=https://petsb2cdev.ciamlogin.com
 APPDEPLOY_BUCKET_NAME=aw-pets-euw-preprod-s3-frontendwebapp
+EDAP_INTEGRATION_LAMBDA_NAME=edap-integration-lambda
+EDAP_INTEGRATION_LAMBDA_BUCKET=aw-pets-euw-preprod-s3-edap-integrationlambda
+EDAP_INTEGRATION_QUEUE_NAME=sqs-edap-integration
+EDAP_INTEGRATION_DLQ_NAME=sqs-edap-integration-dlq
