--- a/configs/.env.prod
+++ b/configs/.env.prod
@@ -21,3 +21,7 @@ VITE_MSAL_CLIENT_ID=194a7cd5-ebf3-42cb-b636-8e5790634a4c
 VITE_MSAL_TENANT_ID=f0a97303-895e-4921-bfbd-494bded77646
 VITE_AUTH_ENDPOINT_URI=https://petsprod.ciamlogin.com
 APPDEPLOY_BUCKET_NAME=aw-pets-euw-prod-s3-frontendwebapp
+EDAP_INTEGRATION_LAMBDA_NAME=edap-integration-lambda
+EDAP_INTEGRATION_LAMBDA_BUCKET=aw-pets-euw-prod-s3-edap-integrationlambda
+EDAP_INTEGRATION_QUEUE_NAME=sqs-edap-integration
+EDAP_INTEGRATION_DLQ_NAME=sqs-edap-integration-dlq
