--- a/configs/.env.qat
+++ b/configs/.env.qat
@@ -21,3 +21,7 @@ VITE_MSAL_CLIENT_ID=b8af26cb-2053-4f08-a4f1-ccb7b97f7038
 VITE_MSAL_TENANT_ID=f52ae62b-2ff7-4104-b90f-48cdc7454bfb
 VITE_AUTH_ENDPOINT_URI=https://petsb2cdev.ciamlogin.com
 APPDEPLOY_BUCKET_NAME=aw-pets-euw-qat-s3-frontendwebapp
+EDAP_INTEGRATION_LAMBDA_NAME=edap-integration-lambda
+EDAP_INTEGRATION_LAMBDA_BUCKET=aw-pets-euw-qat-s3-edap-integrationlambda
+EDAP_INTEGRATION_QUEUE_NAME=sqs-edap-integration
+EDAP_INTEGRATION_DLQ_NAME=sqs-edap-integration-dlq
